# hasura-django-starter

./: .gitignore  .gitpod.yml  README.md  docker-compose-client-svelte.yml  docker-compose-client.yml  docker-compose-hoppscotch.yml  docker-compose.yml  pyproject.toml  script.py  views.py
client/: package.json
client/public/: style.css
client/src/: App.svelte
client/src/components/: Footer.svelte  Redirect.svelte
client/src/pages/: Auth.svelte  Home-old.svelte  Home.svelte  Profile.svelte  UserCreate.svelte  UserExpanded.svelte  Users.svelte
client/src/shared/: auth.js  requests.js
clients/html/: auth.html  core.css  create-user.html  edit-user.html  index.html  profile.html  style.css  users.html
clients/svelte/: package-lock.json  package.json  rollup.config.js
clients/svelte/public/: core.css  index.html  style.css
clients/svelte/src/: App.svelte
django/: Dockerfile  entrypoint.sh  requirements.txt
django/api/: admin.py  apps.py  auth.py  logic.py  models.py  sample_emails.py  sample_logic.py  urls.py
django/api/migrations/: 0001_initial.py  0002_alter_profile_role.py
django/app/: settings.py  urls.py
django/apps/summarizations/: admin.py  apps.py  models.py
django/apps/transcriptions/: admin.py  apps.py  models.py
django/apps/tweets/: admin.py  apps.py  hello.html  home.html  models.py  news.html  serializers.py  urls.py  views.py
django/apps/users/: admin.py  models.py
hasura/: config.yaml
hasura/metadata/: actions.graphql  actions.yaml  functions.yaml  tables.yaml
hasura/migrations/1609170722644_init/: up.sql
(+65 files in other folders)
